Fix media desc not collapsing

--- a/src/styles/post/singleMedia.less
+++ b/src/styles/post/singleMedia.less
@@ -68,7 +68,7 @@
 			text-shadow: 0px 1px 2px #000;
 		 }
 
-		 &.collapsed .text {
+		 &.collapsed .mediaDescText {
 			display: inline-block;
 			white-space: nowrap;
 			overflow: hidden;
